paths update